@@ -1,5 +1,6 @@
 cm4all-workshop (2.0.13) unstable; urgency=low
 
+  * workshop: show plan name and job id in log messages
   * syslog: allow lines up to 1 kB
 
  --   
